storing the chart doc while loading is a bad idea, fdo#57530

There seems to be no obvious reason why we would need to store the chart
doc during xls import. The chart test docs don't show any difference
without this call.

This speeds up xls chart import quite a bit. With the test doc from the
bug report I'm able to open the doc nearly instantly now.

Change-Id: I0b80462b9d1c405ab1d4cf456e12ebfe4428db98